--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
     background-color: var(--white);
 }
 
+
 .nav {
     border-bottom: 1px solid #e5e5e5;
     padding: 24px 0;
@@ -84,14 +85,14 @@ body {
     font-weight: 700;
     line-height: 1.1;
     margin-bottom: 24px;
-    color: var(--black);
+    color: var(--white);
     max-width: 800px;
 }
 
 .hero-description {
     font-size: 20px;
     line-height: 1.6;
-    color: var(--text-light);
+    color: var(--white);
     max-width: 700px;
     margin-bottom: 64px;
 }
@@ -126,6 +127,31 @@ body {
     color: var(--text-light);
     line-height: 1.7;
 }
+
+/* .intro {
+    background-color: red;
+    background-image: url("img/games.jpg");
+} */
+
+.intro {
+    position: relative;
+    background-image: url("img/games.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 120px 0;
+}
+
+.intro::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+
 
 /* Projects Section */
 .projects {
